# LumenLLM

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  parameters.quant-example.jsonc
crates/aegisllm/: Cargo.toml  build.rs
crates/aegisllm-base/: Cargo.toml
crates/aegisllm-base/src/: artifact.rs  backend.rs  backend_types.rs  chat_parse.rs  cuda_config.rs  cuda_types.rs  error.rs  generation.rs  graph.rs  hardware.rs  lib.rs  text.rs
crates/aegisllm-base/src/executor/: generation.rs  mod.rs  tensors.rs  traits.rs
crates/aegisllm-base/src/modalities/: audio.rs  fusion.rs  image_preprocess.rs  mod.rs  mrope.rs  video.rs  vision.rs
crates/aegisllm-base/src/model/: gemma4.rs  llama.rs  mod.rs  nemotron3.rs  qwen3.rs
crates/aegisllm-base/src/planning/: memory.rs  mod.rs  placement.rs  runtime.rs
crates/aegisllm-base/src/tensor/: core.rs  layout.rs  quant.rs  storage.rs
crates/aegisllm-cpu/: Cargo.toml
crates/aegisllm-cpu/src/: attention.rs  fp8_gemv.rs  int4_gptq_gemv.rs  lib.rs  materialization.rs  nvfp4_gemv.rs  persistent_pool.rs
crates/aegisllm-cpu/src/cpu/: attention.rs  block.rs  forward.rs  gdn.rs  loader.rs  math.rs  mod.rs  provider.rs  rope.rs  runtime.rs  runtime_linear.rs  runtime_loader.rs  simd.rs  state.rs
crates/aegisllm-cpu/src/cpu/g4/: attention.rs  forward.rs  linear.rs  loader.rs  mod.rs  moe.rs  norm.rs  ple.rs  rope.rs  state.rs
crates/aegisllm-cuda/: Cargo.toml  build.rs
crates/aegisllm-cuda/src/: lib.rs
crates/aegisllm-cuda/src/cuda/: compile.rs  cutlass_bridge.rs  cutlass_bridge_moe.cu  expert_cache.rs  functions.rs  host_arena.rs  kernels.rs  loader.rs  mod.rs  owned_pinned.rs  pcie_bench.rs  registered_shards.rs  repack.rs  runtime.rs  staging.rs  types.rs
crates/aegisllm-cuda/src/cuda/kernels/blackwell/: aegis_mma_tile.cuh  attention_decode.cu  attention_decode_common.cuh  attention_prefill_dense_wmma.cu  attention_prefill_fa2.cu  attention_prefill_fa2_fp8.cu  attention_prefill_fa2_fp8_mma.cu  attention_prefill_gqa2_hdim512.cu  attention_prefill_mma2_hdim512.cu  attention_prefill_mma4_hdim512.cu  attention_prefill_mma_hdim512.cu  attention_prefill_regsmx_hdim512.cu  attention_utils.cuh  audio_ops.cu  fp8_mma.cuh  fp8_mma_smoke.cu  gated_deltanet_decode.cu  kv_fp8.cu  kv_q8_0.cu  linear_fp8.cu  linear_nvfp4_packed.cu  linear_nvfp4_unpacked.cu  linear_utils.cuh  mamba_scan_decode.cu  moe_gpu_driven_decode.cu  norm_rope_kv.cu  router_topk.cu  sampling.cu  speculative.cu  vision_attention.cu  vision_ops.cu  vision_softmax.cu
crates/aegisllm-cuda/src/cuda/runtime/: blackwell.rs  cublaslt.rs  cutlass.rs  cutlass_moe_smoke.rs  fp8_mma_smoke.rs  graph.rs  kv.rs  linear.rs  memory.rs  moe_gpu_driven.rs  ops.rs  quant.rs  sampling.rs  state_cache.rs
crates/aegisllm-cuda/src/cuda/runtime/attention/: decode.rs  dispatch.rs  mod.rs  prefill_dense.rs  prefill_paged.rs
crates/aegisllm-cuda/src/executor/: attention.rs  audio.rs  block.rs  cache_cleanup.rs  forward.rs  full.rs  gdn.rs  layer_capture.rs  linear_ops.rs  load_progress.rs  loader.rs  mlp.rs  mod.rs  mtp.rs  planning.rs  ple.rs  prefix_cache.rs  provider.rs  rope.rs  speculative.rs  state.rs  vision.rs  vision_qwen.rs
crates/aegisllm-cuda/src/executor/prefill/: gemm.rs  kv.rs  layer.rs  mod.rs  moe.rs  scheduler.rs  timings.rs
crates/aegisllm-cuda/src/executor/prefill/batch/: builder.rs  mod.rs
crates/aegisllm-wgpu/: Cargo.toml
crates/aegisllm-wgpu/src/: lib.rs
crates/aegisllm-wgpu/src/wgpu/: block.rs  forward.rs  loader.rs  mod.rs  provider.rs  state.rs  weights.rs
crates/aegisllm-wgpu/src/wgpu/shaders/: decode_attention.wgsl  dequant_bf16.wgsl  dequant_nvfp4.wgsl  embedding.wgsl  geglu_tanh.wgsl  matmul_bf16.wgsl  matmul_f32.wgsl  residual_add.wgsl  rms_norm_batched.wgsl  rope.wgsl  scale_f32.wgsl  swiglu.wgsl
crates/aegisllm-wgpu/tests/: forward_token_e2e.rs
crates/aegisllm/src/: cli.rs  engine.rs  graph.rs  lib.rs  main.rs
crates/aegisllm/src/cli/: command.rs  flags.rs  gates.rs  generate.rs  helpers.rs  parse.rs  run.rs  smoke.rs
crates/aegisllm/src/cuda/: compile.rs  functions.rs  loader.rs  mod.rs  runtime.rs
crates/aegisllm/src/cuda/kernels/blackwell/: attention_fa4.cu  linear_nvfp4_unpacked.cu
crates/aegisllm/src/cuda/runtime/: linear.rs  ops.rs
crates/aegisllm/src/cuda/runtime/attention/: mod.rs
crates/aegisllm/src/engine/: bench.rs  eval_mmlu_pro.rs  perplexity.rs  quality.rs  report.rs  sample_diversity.rs
crates/aegisllm/src/executor/: attention.rs  cpu.rs  hybrid.rs  mod.rs  nodes.rs  tensors.rs
crates/aegisllm/src/executor/cpu/: math.rs  rope.rs  runtime.rs  runtime_linear.rs  state.rs
crates/aegisllm/src/executor/cuda/: attention.rs  forward.rs  full.rs  mod.rs  planning.rs  provider.rs  rope.rs
crates/aegisllm/src/executor/cuda/prefill/: attention.rs  gemm.rs  layer.rs  mod.rs  timings.rs
crates/aegisllm/src/executor/cuda/prefill/batch/: builder.rs  mod.rs
crates/aegisllm/src/executor/nodes/: activation.rs  kv.rs  plan.rs  region.rs  transfer.rs
crates/aegisllm/src/executor/wgpu/: loader.rs  mod.rs  provider.rs
crates/aegisllm/src/executor/wgpu/shaders/: rms_norm.wgsl
crates/aegisllm/src/params/: file.rs  mod.rs  parsing.rs  runtime.rs  tests.rs
crates/aegisllm/src/planning/: memory.rs  placement.rs
crates/aegisllm/src/server/: http.rs
crates/aegisllm/src/tensor/: layout.rs  mod.rs  storage.rs
crates/aegisllm/tests/: wgpu_dequant_nvfp4.rs  wgpu_kernels.rs  wgpu_matmul.rs  wgpu_rms_norm.rs
docs/: CONFIG.md  kernel-utilization-audit.md  prefill-architecture.md  prefill.md
examples/: parameters.gemma4-26b-vision-draft.json  parameters.qwen35-9b.json  parameters.qwen36-35b.json
src/: backend.rs  cli.rs  cpu.rs  engine.rs  generation.rs  hardware.rs  lib.rs  params.rs
src/cli/: command.rs  flags.rs  generate.rs  helpers.rs  parse.rs  run.rs  smoke.rs
src/cpu/: linear.rs
src/cuda/: config.rs  cutlass_bridge.cu  cutlass_bridge.rs  functions.rs  kernels.rs  loader.rs  mod.rs  repack.rs  runtime.rs  (+1 more)
tests/: smoke_cli.rs
(+70 files in other folders)
