[package]
name = "aegisllm"
version = "0.2.0"
edition = "2024"

[dependencies]
cudarc = { version = "0.19.4", default-features = false, features = ["std", "driver", "runtime", "nvrtc", "cuda-version-from-build-system", "fallback-dynamic-loading"] }
memmap2 = "0.9"
rayon = "1.11"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokenizers = "0.22"

[dev-dependencies]
tempfile = "3.12"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
