[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.dependencies]
cudarc = { version = "0.19.4", default-features = false, features = ["std", "driver", "runtime", "nvrtc", "cublaslt", "f16", "cuda-version-from-build-system", "fallback-dynamic-loading"] }
half = "2"
# Vision pipeline (Stage I): PNG/JPEG decoding + tensor preprocessing.
# default-features=false strips unused codecs.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
memmap2 = "0.9"
libc = "0.2"
rayon = "1.11"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokenizers = "0.22"
pulp = "0.21"
wgpu = "23"
bytemuck = { version = "1.18", features = ["derive"] }
pollster = "0.4"
tempfile = "3.12"
minijinja = { version = "2.5", features = ["loader", "macros", "builtins"] }
minijinja-contrib = { version = "2.5", features = ["pycompat"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
