[package]
name = "aegisllm-base"
version.workspace = true
edition.workspace = true

[dependencies]
image.workspace = true
memmap2.workspace = true
libc.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
wgpu.workspace = true
minijinja.workspace = true
minijinja-contrib.workspace = true

[dev-dependencies]
tempfile.workspace = true
