[package]
name = "aegisllm-cuda"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
aegisllm-base = { path = "../aegisllm-base" }
aegisllm-cpu = { path = "../aegisllm-cpu" }
cudarc.workspace = true
half.workspace = true
memmap2.workspace = true
rand.workspace = true
libc.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
