[package]
name = "aegisllm"
version.workspace = true
edition.workspace = true

[dependencies]
aegisllm-base = { path = "../aegisllm-base" }
aegisllm-cpu = { path = "../aegisllm-cpu" }
aegisllm-cuda = { path = "../aegisllm-cuda" }
aegisllm-wgpu = { path = "../aegisllm-wgpu" }
cudarc.workspace = true
half.workspace = true
libc.workspace = true
memmap2.workspace = true
rayon.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
pulp.workspace = true
wgpu.workspace = true
bytemuck.workspace = true
pollster.workspace = true

[dev-dependencies]
tempfile.workspace = true
